[package]
name = "txp"
version = "0.1.0"
authors = ["leonidkornev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "0.2.7"
enigo = "0.0.14"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.12"
lazy_static = "1.4.0"
